refactor List method from toList to collect and save when update an incident